test/ServiceMailer.php
<?php
declare(strict_types=1);
namespace Quid\Main\Test;
use Quid\Base;

// serviceMailer
class ServiceMailer extends Base\Test
{
	// trigger
	public static function trigger(array $data):bool
	{
		// construct

		// prepare

		// error

		// isActive

		// username

		// from

		// reset

		// mailer

		// isReady

		// checkReady

		// prepareMessage

		// messageCastObj

		// messageWithOption

		// send

		// sendOnCloseDown

		// sendNowOrOnCloseDown

		// sendTest

		// sendLoop

		// queue

		// queueTest

		// queueLoop

		// dispatch

		// dispatchLoop

		// log

		// queueClass

		// logClass

		// getDispatch

		// setDispatch
		
		return true;
	}
}
?>